# 3D-engine-from-scratch

./: .gitignore  CMakeLists.txt  README.md  compile.bat  conanfile.py  vcpkg.json
include/: engine.hpp  image.hpp  shader.hpp  vectors.hpp
include/SDL2/: SDL_config.h
include/shaders/: colorShader.hpp  shader.hpp
src/: README.md  engine.cpp  image.cpp  main copy.cpp  main.cpp
src/shaders/: ColorShader.cpp  shader.cpp
